# DoubleX

./: pyproject.toml
doublex/: __main__.py  browser_api.py  chrome_api.py  danger_analysis.py  display_extension.py  extension_communication.py  get_pdg.py  handle_messages.py  messages.py  unpack_extension.py  vulnerability_detection.py  wa_communication.py
doublex/pdg_js/: build_pdg.py  display_graph.py  js_operators.py  utility_df.py
